# gamechanger-ml

./: .dockerignore  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  dead_code.txt  dev-requirements.txt  dev.requirements.txt  gc-venv-green.txt  k8s.lock.requirements.txt  k8s.requirements.txt  lock.requirements.txt  pyproject.toml  requirements.txt  requirements_db.txt  requirements_sipr.txt  setup.py  testMlflow.py  testingmirror.txt  testset.csv  topic_model.sh
.github/: pull_request_template.md
.github/workflows/: docker-image.yml  python-app.yml
api/fastapi/: mlapp.py
configs/: config.py
docs/: VENV.md
en_core_web_md/: config.cfg  meta.json
en_core_web_md/parser/: model
en_core_web_md/senter/: model
en_core_web_md/tagger/: model
gamechangerml/: __init__.py  setup_env.sh
gamechangerml/2022-06-17_154046/: finetuning_data_20220617.csv  retrieved_paragraphs.csv  training_metadata.json
gamechangerml/api/: .dockerignore  .env  README.md  docker-compose.override.template.yml  docker-compose.yml  getInitModels.py
gamechangerml/configs/: __init__.py  config.py  document_comparison_config.py  embedder_config.py  path_config.py  postgres_config.py  redis_config.py  semantic_config.py  semantic_search_config.py  similarity_ranker_config.py  spacy_config.py  validation_config.py
gamechangerml/data/: SearchPdfMapping.csv  combined_entities.csv  popular_documents.csv
gamechangerml/data_transfer/: __init__.py  s3_download.py
gamechangerml/debug/: debug_connector.py  (+1 more)
unittest/: README.md  control_tests.py  eval_tests.py  qa_tests.py  train_tests.py
(+460 files in other folders)
